fixed margins of logo,links tab, awesome text logo was overlapping with awesome text added top margins to awesome text added negative top margins to links tab

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 
 .link-tabs ul {
     list-style: none;
+    margin-top: -50px;
 }
 
 .link-tabs li {
@@ -41,4 +42,8 @@ div.logo img {
     height: 100px;
     margin-bottom: -20px;
     margin-left: 50px;
+}
+
+div.awesome-text {
+    margin-top: 50px;
 }
